// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parry target should dodge attack if has more dex 1`] = `
[
  {
    "action": "🤺 Парирование",
    "actionType": "skill",
    "exp": 8,
    "initiator": "alias",
    "msg": [Function],
    "target": "asperiores",
  },
  {
    "action": "attack",
    "actionType": "phys",
    "initiator": "asperiores",
    "message": "PARRYED",
    "target": "alias",
    "weapon": {
      "code": "a100",
    },
  },
]
`;

exports[`parry target should not dodge attack if has more dex 1`] = `
[
  {
    "action": "🤺 Парирование",
    "actionType": "skill",
    "initiator": "repellat",
    "message": "SKILL_FAIL",
    "target": "explicabo",
  },
  {
    "action": "attack",
    "actionType": "phys",
    "dmg": 11,
    "dmgType": "physical",
    "exp": 88,
    "hp": -3,
    "initiator": "repellat",
    "target": "explicabo",
    "weapon": {
      "code": "a100",
    },
  },
]
`;
